[gd_scene load_steps=2 format=3 uid="uid://be4tyysntxt3b"]

[ext_resource type="Script" path="res://scenes/enemy_spawner.gd" id="1_6aqar"]

[node name="EnemySpawner" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_6aqar")

[node name="SpawnedEntities" type="Node2D" parent="."]
y_sort_enabled = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
